@@ -1,6 +1,7 @@
 // Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.messagebus;
 
+import com.yahoo.concurrent.ManualTimer;
 import com.yahoo.jrt.ListenFailedException;
 import com.yahoo.jrt.slobrok.server.Slobrok;
 import com.yahoo.messagebus.network.rpc.test.TestServer;
@@ -14,7 +15,7 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -29,8 +30,8 @@ public class ThrottlerTestCase {
     @BeforeEach
     public void setUp() throws ListenFailedException {
         RoutingTableSpec table = new RoutingTableSpec(SimpleProtocol.NAME);
-        table.addHop("dst", "test/dst/session", Arrays.asList("test/dst/session"));
-        table.addRoute("test", Arrays.asList("dst"));
+        table.addHop("dst", "test/dst/session", List.of("test/dst/session"));
+        table.addRoute("test", List.of("dst"));
         slobrok = new Slobrok();
         src = new TestServer("test/src", table, slobrok, null);
         dst = new TestServer("test/dst", table, slobrok, null);
@@ -127,7 +128,7 @@ public class ThrottlerTestCase {
 
     @Test
     void testDynamicWindowSize() {
-        CustomTimer timer = new CustomTimer();
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5)
@@ -151,7 +152,7 @@ public class ThrottlerTestCase {
 
     @Test
     void testIdleTimePeriod() {
-        CustomTimer timer = new CustomTimer();
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5)
@@ -162,15 +163,15 @@ public class ThrottlerTestCase {
         assertTrue(windowSize >= 90 && windowSize <= 110);
 
         Message msg = new SimpleMessage("foo");
-        timer.millis += 30 * 1000;
+        timer.advance(30 * 1000);
         assertTrue(policy.canSend(msg, 0));
         assertTrue(windowSize >= 90 && windowSize <= 110);
 
-        timer.millis += 60 * 1000 + 1;
+        timer.advance(60 * 1000 + 1);
         assertTrue(policy.canSend(msg, 50));
         assertEquals(55, policy.getMaxPendingCount());
 
-        timer.millis += 60 * 1000 + 1;
+        timer.advance(60 * 1000 + 1);
         assertTrue(policy.canSend(msg, 0));
         assertEquals(5, policy.getMaxPendingCount());
 
@@ -178,7 +179,7 @@ public class ThrottlerTestCase {
 
     @Test
     void testMinWindowSize() {
-        CustomTimer timer = new CustomTimer();
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5)
@@ -191,7 +192,7 @@ public class ThrottlerTestCase {
 
     @Test
     void testMaxWindowSize() {
-        CustomTimer timer = new CustomTimer();
+        ManualTimer timer = new ManualTimer();
         DynamicThrottlePolicy policy = new DynamicThrottlePolicy(timer);
 
         policy.setWindowSizeIncrement(5);
@@ -202,7 +203,7 @@ public class ThrottlerTestCase {
         assertTrue(windowSize >= 40 && windowSize <= 50);
     }
 
-    private int getWindowSize(DynamicThrottlePolicy policy, CustomTimer timer, int maxPending) {
+    private int getWindowSize(DynamicThrottlePolicy policy, ManualTimer timer, int maxPending) {
         Message msg = new SimpleMessage("foo");
         Reply reply = new SimpleReply("bar");
         reply.setContext(1);
@@ -213,8 +214,8 @@ public class ThrottlerTestCase {
                 ++numPending;
             }
 
-            long tripTime = (numPending < maxPending) ? 1000 : 1000 + (numPending - maxPending) * 1000;
-            timer.millis += tripTime;
+            long tripTime = (numPending < maxPending) ? 1000L : 1000 + (numPending - maxPending) * 1000L;
+            timer.advance(tripTime);
 
             while (--numPending >= 0) {
                 policy.processReply(reply);
